--- a/src/assets/scss/_variables.scss
+++ b/src/assets/scss/_variables.scss
@@ -62,6 +62,9 @@ $widescreen: 1152px + (2 * $gap) !default;
 // 1344px container + 4rem;
 $fullhd: 1344px + (2 * $gap) !default;
 
+// disable navbar breakpoint
+$navbar-breakpoint: 0;
+
 // Miscellaneous
 
 $easing: ease-out !default;
